--- a/lab2/Jenkinsfile
+++ b/lab2/Jenkinsfile
@@ -15,25 +15,25 @@ pipeline {
         // Шаг создания датасетов
         stage('Data Creating') {
             steps {
-                sh '/home/dima/mlops/lab2/venv/bin/python /home/dima/mlops/lab2/src/data_creation.py'
+                sh 'lab2/.venv/bin/python lab2/src/data_creation.py'
             }
         }
         // Шаг предобработки данных
         stage('Model Preprocessing') {
             steps {
-                sh '/home/dima/mlops/lab2/venv/bin/python /home/dima/mlops/lab2/src/model_preprocessing.py'
+                sh 'lab2/.venv/bin/python lab2/src/model_preprocessing.py'
             }
         }
         // Шаг обучения модели
         stage('Model Preparation') {
             steps {
-                sh '/home/dima/mlops/lab2/venv/bin/python /home/dima/mlops/lab2/src/model_preparation.py'
+                sh 'lab2/.venv/bin/python lab2/src/model_preparation.py'
             }
         }
         // Шаг проверки работы модели
         stage('Testing') {
             steps {
-                sh '/home/dima/mlops/lab2/venv/bin/python /home/dima/mlops/lab2/src/model_testing.py'
+                sh 'lab2/.venv/bin/python lab2/src/model_testing.py'
             }
         }
     }
